<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Submitbtnn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bttnrounded"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddrss" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/StudentNumber"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:gravity="center"
        android:hint="@string/student_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/internalscholarships2"
        android:layout_width="300dp"
        android:layout_height="97dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/top_shape"
        android:gravity="center"
        android:text="@string/application_form"
        android:textColor="#1B5E20"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internalscholarships2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText3"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/requirments_border"
            android:gravity="center"
            android:hint="@string/name"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/CPnumber"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cellphone_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentNumber"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/requirments_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/Genderspinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPnumber"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/Genderspinner"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/CPnumber"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Birthdate"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/birthdate"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

    <Button
        android:id="@+id/Birthdatebttn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/month_day_year"
        android:textAllCaps="false"
        android:background="@drawable/requirments_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Birthdate"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Address"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:gravity="center"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Birthdatebttn"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/YearLevel"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:gravity="center"
        android:hint="@string/year_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Course"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:gravity="center"
        android:hint="@string/course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YearLevel"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/EmailAddrss"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/requirments_border"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Course"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>