<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="300dp"
        android:layout_height="97dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/top_shape"
        android:text="@string/welcome_flames"
        android:textStyle="bold"
        android:textColor="#1B5E20"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtsasamahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sasamahan_kita"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:fontFamily="@font/calibri_italic"
        app:drawableStartCompat="@drawable/ic_action_check1"
        app:drawableTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtwelcome" />

    <TextView
        android:id="@+id/texttypescholarship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/type_of_scholarship"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsasamahan" />

    <Button
        android:id="@+id/internalbttn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/internal_external_bttn"
        android:text="@string/internal"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttypescholarship" />

    <Button
        android:id="@+id/externalbttn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/internal_external_bttn"
        android:text="@string/external"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texttypescholarship" />

</androidx.constraintlayout.widget.ConstraintLayout>